--- a/TruckCenter/app/build.gradle
+++ b/TruckCenter/app/build.gradle
@@ -19,8 +19,15 @@ android {
     }
 }
 
+repositories {
+    maven {
+        url "https://jitpack.io"
+    }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.google.android.gms:play-services:6.5.87'
+    compile 'it.neokree:MaterialTabs:0.11'
 }
