--- a/truck-center-webapp/src/main/resources/application.properties
+++ b/truck-center-webapp/src/main/resources/application.properties
@@ -7,7 +7,7 @@ logging.level.com.ingesup=DEBUG
 
 #### DataSource properties ###
 qcm.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-qcm.datasource.url=jdbc:sql://xmc90ssinh.database.windows.net/truck-center
+qcm.datasource.url=jdbc:sql://xmc90ssinh.database.windows.net/bdsoa
 qcm.datasource.username=dbsoapUser
 qcm.datasource.password=dbso@pUser69!?
 
@@ -25,3 +25,7 @@ security.user.role=ADMIN
 ### TRUCK-CENTER DATABASE ###
 qcm.database.initialize=false
 qcm.database.roles=ROLE_ADMIN,ROLE_DRIVER
+
+
+
+f2or5&an
