--- a/truck-center-model/pom.xml
+++ b/truck-center-model/pom.xml
@@ -13,6 +13,8 @@
         <java.version>1.7</java.version>
 
         <javax-persistence-api.version>1.0.2</javax-persistence-api.version>
+
+        <junit.version>4.11</junit.version>
     </properties>
 
     <dependencies>
@@ -23,6 +25,11 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
