--- a/truck-center-webapp/pom.xml
+++ b/truck-center-webapp/pom.xml
@@ -28,8 +28,9 @@
         <http-client.version>4.4</http-client.version>
 
         <sql-jdbc-connector.version>1.0.0.RELEASE</sql-jdbc-connector.version>
-
         <jstl.version>1.2</jstl.version>
+
+        <activiti.version>5.17.0</activiti.version>
 
         <spring.security.version>3.2.5.RELEASE</spring.security.version>
         <spring.security-test.version>4.0.0.RC1</spring.security-test.version>
@@ -45,12 +46,6 @@
         <dependency>
             <groupId>com.ingesup</groupId>
             <artifactId>truck-center-model</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>fr.florianlopes</groupId>
-            <artifactId>activiti-rest-client</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
@@ -79,9 +74,15 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-test</artifactId>
-            <version>${spring.security-test.version}</version>
+            <groupId>org.activiti</groupId>
+            <artifactId>activiti-spring</artifactId>
+            <version>${activiti.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.activiti</groupId>
+            <artifactId>activiti-engine</artifactId>
+            <version>${activiti.version}</version>
         </dependency>
 
         <dependency>
@@ -124,6 +125,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <version>${spring.security-test.version}</version>
         </dependency>
 
         <dependency>
