--- a/TruckCenter/app/src/main/AndroidManifest.xml
+++ b/TruckCenter/app/src/main/AndroidManifest.xml
@@ -6,12 +6,17 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
+        <meta-data android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name"
@@ -26,6 +31,11 @@
             android:name=".MainActivity"
             android:label="@string/title_activity_main" >
         </activity>
+
+        <service
+            android:name=".service.TrackerService"
+            android:exported="false" >
+        </service>
     </application>
 
 </manifest>
