Update JPA configuration test + entities mapping

--- a/truck-center-webapp/src/main/resources/application.properties
+++ b/truck-center-webapp/src/main/resources/application.properties
@@ -9,7 +9,7 @@ logging.level.com.ingesup=DEBUG
 qcm.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 qcm.datasource.url=jdbc:sql://xmc90ssinh.database.windows.net/bdsoa
 qcm.datasource.username=dbsoapUser
-qcm.datasource.password=dbso@pUser69!?
+qcm.datasource.password=dbso@pUser69!
 
 
 spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
