--- a/truck-center-model/pom.xml
+++ b/truck-center-model/pom.xml
@@ -15,6 +15,7 @@
         <javax-persistence-api.version>1.0.2</javax-persistence-api.version>
 
         <junit.version>4.11</junit.version>
+        <hibernate.version>4.3.8.Final</hibernate.version>
     </properties>
 
     <dependencies>
@@ -23,6 +24,24 @@
             <artifactId>persistence-api</artifactId>
             <version>${javax-persistence-api.version}</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.1-api</artifactId>
+            <version>1.0.0.Final</version>
         </dependency>
 
         <dependency>
