--- a/truck-center-webapp/src/main/resources/application.properties
+++ b/truck-center-webapp/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+### GLOBAL PROPERTIES ###
+server.port=8080
 
 ### LOGGING
 logging.level.org.springframework=DEBUG
@@ -5,16 +7,16 @@ logging.level.org.hibernate=INFO
 logging.level.com.ingesup=DEBUG
 
 
-#### DataSource properties ###
-qcm.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-qcm.datasource.url=jdbc:sql://xmc90ssinh.database.windows.net/bdsoa
-qcm.datasource.username=dbsoapUser
-qcm.datasource.password=dbso@pUser69!
-
-
-spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+##### DataSource properties ###
+#qcm.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#qcm.datasource.url=jdbc:sql://xmc90ssinh.database.windows.net/bdsoap
+#qcm.datasource.username=dbsoapUser
+#qcm.datasource.password=dbso@pUser69!
+#
+#
+#spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
 
 
 ### SECURITY PROPERTIES ###
