ActivitiConfig OK + Add messages.properties + AddDriverForm + AddTruckForm + DriverController

--- a/truck-center-webapp/src/main/resources/application.properties
+++ b/truck-center-webapp/src/main/resources/application.properties
@@ -2,21 +2,25 @@
 server.port=8080
 
 ### LOGGING
-logging.level.org.springframework=DEBUG
+logging.level.org.springframework=INFO
 logging.level.org.hibernate=INFO
 logging.level.com.ingesup=DEBUG
 
 
 ##### DataSource properties ###
-#qcm.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#qcm.datasource.url=jdbc:sql://xmc90ssinh.database.windows.net/bdsoap
-#qcm.datasource.username=dbsoapUser
-#qcm.datasource.password=dbso@pUser69!
-#
-#
-#spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.datasource.url=jdbc:sqlserver://xmc90ssinh.database.windows.net:1433;databaseName=bdsoap
+#spring.datasource.username=justyna
+#spring.datasource.password=Ingesup69
+
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/truck-center
+spring.datasource.username=truck-center
+spring.datasource.password=truck-center
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 
 
 ### SECURITY PROPERTIES ###
