--- a/truck-center-webapp/pom.xml
+++ b/truck-center-webapp/pom.xml
@@ -28,6 +28,8 @@
         <http-client.version>4.4</http-client.version>
 
         <sql-jdbc-connector.version>1.0.0.RELEASE</sql-jdbc-connector.version>
+        <mysql.version>5.1.28</mysql.version>
+
         <jstl.version>1.2</jstl.version>
 
         <activiti.version>5.17.0</activiti.version>
@@ -98,6 +100,12 @@
         </dependency>
 
         <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf-spring4</artifactId>
             <version>${thymeleaf-spring4.version}</version>
@@ -111,7 +119,7 @@
 
         <dependency>
             <groupId>com.microsoft</groupId>
-            <artifactId>sql-jdbc-connector</artifactId>
+            <artifactId>sql-jdbc-connector4</artifactId>
             <version>${sql-jdbc-connector.version}</version>
         </dependency>
 
