--- a/truck-center-mule/src/main/resources/mule.properties
+++ b/truck-center-mule/src/main/resources/mule.properties
@@ -1,23 +1,26 @@
-notifications-rest-endpoint.host=truckcenter.martinleguillou.fr
-notifications-rest-endpoint.port=8080
+notifications-rest-endpoint.host=localhost
+#notifications-rest-endpoint.host=truckcenter.martinleguillou.fr
+
+notifications-rest-endpoint.port=8081
 notifications-rest-endpoint.path=/positionService
 
 notifications-rest-endpoint.auth.username=android-truck-app
 notifications-rest-endpoint.auth.password=a4&f24E0!
 
 ### ActiveMQ configuration
-activemq.broker.url=
-activemq.broker.username=
-activemq.broker.password=
+activemq.broker.url=tcp://localhost:61616
+activemq.broker.username=admin
+activemq.broker.password=admin
 
 drivers-positions.queue=DRIVERS.POSITIONS
 
 
 ### Alerts API
-alerts-rest-api.host=truckcenter.martinleguillou.fr
-alerts-rest-api.port=80
-alerts-rest-api.path=/driverAlerts
+alerts-rest-api.host=localhost
+#alerts-rest-api.host=truckcenter.martinleguillou.fr
+alerts-rest-api.port=8080
+alerts-rest-api.path=/rest/alerts
 
 
 ### Esper configuration
-esper.stopped-driver.query=SELECT ...
+esper.stopped-driver.query=SELECT * FROM PositionNotificationEvent
