--- a/truck-center-mule/src/main/app/mule-deploy.properties
+++ b/truck-center-mule/src/main/app/mule-deploy.properties
@@ -1,5 +1,5 @@
-#Tue Mar 31 21:49:10 CEST 2015
+#Tue Mar 31 22:33:12 CEST 2015
 redeployment.enabled=true
 encoding=UTF-8
-config.resources=test.xml,test-flow.xml,notifications-rest-endpoint-flow.xml,drivers-flows.xml,connectors.xml,common-config.xml
 domain=default
+config.resources=notifications-rest-endpoint-flow.xml,drivers-flows.xml,connectors.xml,common-config.xml
