Updated truck-center-model pom to specify source version

--- a/truck-center-mule/pom.xml
+++ b/truck-center-mule/pom.xml
@@ -13,6 +13,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		
 		<activemq.version>5.7.0</activemq.version>
+		<esper-version>4.7.0</esper-version>
 
 		<mule.version>3.6.0</mule.version>
     	<mule.tools.version>1.0</mule.tools.version>
@@ -123,15 +124,19 @@
 
 	<!-- Mule Dependencies -->
 	<dependencies>
-	
 		<!-- ActiveMQ -->
 		<dependency>
 			<groupId>org.apache.activemq</groupId>
 			<artifactId>activemq-core</artifactId>
 			<version>${activemq.version}</version>
 		</dependency>
-		
-	
+
+		<dependency>
+			<groupId>com.espertech</groupId>
+			<artifactId>esper</artifactId>
+			<version>${esper-version}</version>
+		</dependency>
+
 		<!-- Xml configuration -->
 		<dependency>
         	<groupId>com.mulesoft.muleesb</groupId>
