--- a/truck-center-mule/src/main/resources/mule.properties
+++ b/truck-center-mule/src/main/resources/mule.properties
@@ -17,10 +17,15 @@ drivers-positions.queue=DRIVERS.POSITIONS
 
 ### Alerts API
 alerts-rest-api.host=localhost
+alerts-rest-api.protocol=http
 #alerts-rest-api.host=truckcenter.martinleguillou.fr
 alerts-rest-api.port=8080
 alerts-rest-api.path=/rest/alerts
+alerts-rest-api.url=${alerts-rest-api.protocol}://${alerts-rest-api.host}:${alerts-rest-api.port}${alerts-rest-api.path}
+alerts-rest-api.username=admin
+alerts-rest-api.password=admin
 
 
 ### Esper configuration
-esper.stopped-driver.query=SELECT * FROM PositionNotificationEvent
+#esper.stopped-driver.query=SELECT * FROM PositionNotification.win:time(20 minuts) GROUP BY driverId
+esper.stopped-driver.query=SELECT * FROM PositionNotification
