Add config for SQLServer

--- a/truck-center-mule/src/main/resources/mule.properties
+++ b/truck-center-mule/src/main/resources/mule.properties
@@ -29,3 +29,4 @@ alerts-rest-api.password=admin
 ### Esper configuration
 #esper.stopped-driver.query=SELECT * FROM PositionNotification.win:time(20 minuts) GROUP BY driverId
 esper.stopped-driver.query=SELECT * FROM PositionNotification
+SELECT * FROM PositionNotification.win:time(20 minuts) GROUP BY driverId HAVING same(position)
