--- a/truck-center-webapp/src/main/resources/application.properties
+++ b/truck-center-webapp/src/main/resources/application.properties
@@ -8,17 +8,17 @@ logging.level.com.ingesup=DEBUG
 
 
 ##### DataSource properties ###
-#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.datasource.url=jdbc:sqlserver://xmc90ssinh.database.windows.net:1433;databaseName=bdsoap
-#spring.datasource.username=justyna
-#spring.datasource.password=Ingesup69
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url=jdbc:sqlserver://xmc90ssinh.database.windows.net:1433;databaseName=bdsoap
+spring.datasource.username=justyna
+spring.datasource.password=Ingesup69
 
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/truck-center
-spring.datasource.username=truck-center
-spring.datasource.password=truck-center
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/truck-center
+#spring.datasource.username=truck-center
+#spring.datasource.password=truck-center
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.SQLServer2008Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
