--- a/truck-center-mule/pom.xml
+++ b/truck-center-mule/pom.xml
@@ -210,12 +210,12 @@
 			<version>${mule.version}</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
+<!-- 		<dependency>
 			<groupId>com.cloveretl</groupId>
 			<artifactId>cloveretl-engine</artifactId>
 			<version>${mule.version}</version>
 			<scope>test</scope>
-		</dependency>
+		</dependency> -->
 	<dependency>
             <groupId>org.mule.transports</groupId>
             <artifactId>mule-transport-jms</artifactId>
