--- a/truck-center-mule/src/main/resources/mule.properties
+++ b/truck-center-mule/src/main/resources/mule.properties
@@ -30,3 +30,15 @@ alerts-rest-api.password=admin
 #esper.stopped-driver.query=SELECT * FROM PositionNotification.win:time(20 minuts) GROUP BY driverId
 esper.stopped-driver.query=SELECT * FROM PositionNotification
 SELECT * FROM PositionNotification.win:time(20 minuts) GROUP BY driverId HAVING same(position)
+driver.create.title=Add driver
+driver.add.title=Add driver
+driver.info=Driver info
+dashboard=Dashboard
+trucks.list=Trucks
+drivers.list=Drivers
+application.home=Home
+logout=Logout
+truck.add.title=Add truck
+truck.create.title=Add truck
+truck.create=Add truck
+no.truck.found=No truck found
