--- a/truck-center-webapp/src/main/resources/application.properties
+++ b/truck-center-webapp/src/main/resources/application.properties
@@ -2,13 +2,13 @@
 server.port=8080
 
 ### LOGGING
-logging.level.org.springframework=INFO
+logging.level.org.springframework=DEBUG
 logging.level.org.hibernate=INFO
 logging.level.com.ingesup=DEBUG
 
-
-spring.view.prefix=classpath:/templates/
-spring.view.suffix=.jsp
+#
+#spring.view.prefix=classpath:/templates/
+#spring.view.suffix=.jsp
 
 ##### DataSource properties ###
 #spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
