--- a/truck-center-webapp/src/main/resources/application.properties
+++ b/truck-center-webapp/src/main/resources/application.properties
@@ -32,11 +32,11 @@ security.user.password=admin
 security.user.role=ADMIN
 
 ### TRUCK-CENTER DATABASE ###
-truck-center.initialize=false
+truck-center.initialize=true
 truck-center.roles=ROLE_ADMIN,ROLE_DRIVER
 
 truck-center.adminEmail=admin@admin.fr
-truck-center.adminpassword=admin
+truck-center.adminPassword=admin
 truck-center.adminFirstname=admin
 truck-center.adminLastname=admin
 
