--- a/truck-center-mule/src/main/resources/mule.properties
+++ b/truck-center-mule/src/main/resources/mule.properties
@@ -1,4 +1,4 @@
-notifications-rest-endpoint.host=localhost
+notifications-rest-endpoint.host=92.222.77.75
 #notifications-rest-endpoint.host=truckcenter.martinleguillou.fr
 
 notifications-rest-endpoint.port=8081
@@ -8,7 +8,7 @@ notifications-rest-endpoint.auth.username=android-truck-app
 notifications-rest-endpoint.auth.password=a4&f24E0!
 
 ### ActiveMQ configuration
-activemq.broker.url=tcp://localhost:61616
+activemq.broker.url=tcp://92.222.77.75:61616
 activemq.broker.username=admin
 activemq.broker.password=admin
 
@@ -16,7 +16,7 @@ drivers-positions.queue=DRIVERS.POSITIONS
 
 
 ### Alerts API
-alerts-rest-api.host=localhost
+alerts-rest-api.host=92.222.77.75
 alerts-rest-api.protocol=http
 #alerts-rest-api.host=truckcenter.martinleguillou.fr
 alerts-rest-api.port=8080
@@ -29,16 +29,3 @@ alerts-rest-api.password=admin
 ### Esper configuration
 #esper.stopped-driver.query=SELECT * FROM PositionNotification.win:time(20 minuts) GROUP BY driverId
 esper.stopped-driver.query=SELECT * FROM PositionNotification
-SELECT * FROM PositionNotification.win:time(20 minuts) GROUP BY driverId HAVING same(position)
-driver.create.title=Add driver
-driver.add.title=Add driver
-driver.info=Driver info
-dashboard=Dashboard
-trucks.list=Trucks
-drivers.list=Drivers
-application.home=Home
-logout=Logout
-truck.add.title=Add truck
-truck.create.title=Add truck
-truck.create=Add truck
-no.truck.found=No truck found
