Update TruckCenterRestService + AlertRestController

--- a/truck-center-mule/src/main/resources/mule.properties
+++ b/truck-center-mule/src/main/resources/mule.properties
@@ -1,5 +1,5 @@
-notifications-rest-endpoint.host=92.222.77.75
-#notifications-rest-endpoint.host=truckcenter.martinleguillou.fr
+notifications-rest-endpoint.host=localhost
+#notifications-rest-endpoint.host=92.222.77.75
 
 notifications-rest-endpoint.port=8081
 notifications-rest-endpoint.path=/positionService
@@ -8,7 +8,7 @@ notifications-rest-endpoint.auth.username=android-truck-app
 notifications-rest-endpoint.auth.password=a4&f24E0!
 
 ### ActiveMQ configuration
-activemq.broker.url=tcp://92.222.77.75:61616
+activemq.broker.url=tcp://localhost:61616
 activemq.broker.username=admin
 activemq.broker.password=admin
 
@@ -16,9 +16,9 @@ drivers-positions.queue=DRIVERS.POSITIONS
 
 
 ### Alerts API
-alerts-rest-api.host=92.222.77.75
+alerts-rest-api.host=localhost
 alerts-rest-api.protocol=http
-#alerts-rest-api.host=truckcenter.martinleguillou.fr
+#alerts-rest-api.host=92.222.77.75
 alerts-rest-api.port=8080
 alerts-rest-api.path=/rest/alerts
 alerts-rest-api.url=${alerts-rest-api.protocol}://${alerts-rest-api.host}:${alerts-rest-api.port}${alerts-rest-api.path}
