--- a/truck-center-webapp/src/main/resources/application.properties
+++ b/truck-center-webapp/src/main/resources/application.properties
@@ -32,7 +32,7 @@ security.user.password=admin
 security.user.role=ADMIN
 
 ### TRUCK-CENTER DATABASE ###
-truck-center.initialize=true
+truck-center.initialize=false
 truck-center.roles=ROLE_ADMIN,ROLE_DRIVER
 
 truck-center.adminEmail=admin@admin.fr
