--- a/truck-center-mule/src/main/resources/mule.properties
+++ b/truck-center-mule/src/main/resources/mule.properties
@@ -28,4 +28,4 @@ alerts-rest-api.password=admin
 
 ### Esper configuration
 #esper.stopped-driver.query=SELECT * FROM PositionNotification.win:time(20 minuts) GROUP BY driverId
-esper.stopped-driver.query=SELECT * FROM PositionNotification
+esper.stopped-driver.query=SELECT * FROM Position.win:time(10) GROUP BY driverId HAVING COUNT(DISTINCT latitude) = 1 AND COUNT(DISTINCT longitude) = 1 AND COUNT(*) > 1;
