--- a/truck-center-webapp/src/main/resources/application.properties
+++ b/truck-center-webapp/src/main/resources/application.properties
@@ -2,7 +2,8 @@
 server.port=8080
 
 ### LOGGING
-logging.level.org.springframework=DEBUG
+logging.level.org.springframework=INFO
+logging.level.org.activiti=INFO
 logging.level.org.hibernate=INFO
 logging.level.com.ingesup=DEBUG
 
@@ -17,7 +18,7 @@ logging.level.com.ingesup=DEBUG
 #spring.datasource.password=Ingesup69
 
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/truck-center
+spring.datasource.url=jdbc:mysql://localhost:3306/truck_center
 spring.datasource.username=truck-center
 spring.datasource.password=truck-center
 
