Add Procfile Heroku deployment file + heroku properties file

--- a/truck-center-mule/src/main/resources/mule.properties
+++ b/truck-center-mule/src/main/resources/mule.properties
@@ -20,7 +20,7 @@ alerts-rest-api.host=localhost
 alerts-rest-api.protocol=http
 #alerts-rest-api.host=92.222.77.75
 alerts-rest-api.port=8080
-alerts-rest-api.path=/truck-center/rest/alerts
+alerts-rest-api.path=/rest/alerts
 alerts-rest-api.url=${alerts-rest-api.protocol}://${alerts-rest-api.host}:${alerts-rest-api.port}${alerts-rest-api.path}
 alerts-rest-api.username=admin
 alerts-rest-api.password=admin
