Add HikariCP connection pool

--- a/truck-center-mule/src/main/resources/mule.properties
+++ b/truck-center-mule/src/main/resources/mule.properties
@@ -1,5 +1,5 @@
-#notifications-rest-endpoint.host=localhost
-notifications-rest-endpoint.host=http://truck-center.herokuapp.com
+notifications-rest-endpoint.host=localhost
+#notifications-rest-endpoint.host=truck-center.herokuapp.com
 #notifications-rest-endpoint.host=92.222.77.75
 
 notifications-rest-endpoint.port=8081
@@ -9,8 +9,8 @@ notifications-rest-endpoint.auth.username=android-truck-app
 notifications-rest-endpoint.auth.password=a4&f24E0!
 
 ### ActiveMQ configuration
-#activemq.broker.url=tcp://localhost:61616
-activemq.broker.url=tcp://92.222.77.75:61616
+activemq.broker.url=tcp://localhost:61616
+#activemq.broker.url=tcp://92.222.77.75:61616
 activemq.broker.username=admin
 activemq.broker.password=admin
 
@@ -19,7 +19,7 @@ drivers-positions.queue=DRIVERS.POSITIONS
 
 ### Alerts API
 #alerts-rest-api.host=localhost
-alerts-rest-api.host=http://truck-center.herokuapp.com
+alerts-rest-api.host=truck-center.herokuapp.com
 alerts-rest-api.protocol=http
 #alerts-rest-api.host=92.222.77.75
 alerts-rest-api.port=80
