--- a/truck-center-webapp/src/main/resources/application-heroku.properties
+++ b/truck-center-webapp/src/main/resources/application-heroku.properties
@@ -7,10 +7,18 @@ logging.level.org.hibernate=INFO
 logging.level.com.ingesup=DEBUG
 
 
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://eu-cdbr-west-01.cleardb.com/heroku_a576c312d5ed9d7?reconnect=true
-spring.datasource.username=ba0afe6a0044df
-spring.datasource.password=e0ac914f
+qcm.datasource.dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
+qcm.datasource.url=jdbc:mysql://eu-cdbr-west-01.cleardb.com/heroku_a576c312d5ed9d7?reconnect=true
+qcm.datasource.username=ba0afe6a0044df
+qcm.datasource.password=e0ac914f
+
+
+qcm.datasource.cachePrepStmts=true
+qcm.datasource.prepStmtCacheSize=250
+qcm.datasource.prepStmtCacheSqlLimit=2048
+qcm.datasource.useServerPrepStmts=true
+qcm.datasource.maximumPoolSize=9
+
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
