--- a/truck-center-webapp/pom.xml
+++ b/truck-center-webapp/pom.xml
@@ -35,6 +35,8 @@
 		<spring.security-test.version>4.0.0.RC1</spring.security-test.version>
 		<spring.security.taglibs.version>3.2.5.RELEASE</spring.security.taglibs.version>
 
+		<hikari-cp.version>2.3.2</hikari-cp.version>
+
 		<commons-dbcp.version>1.4</commons-dbcp.version>
 		<commons-lang.version>2.6</commons-lang.version>
 
@@ -124,6 +126,13 @@
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.zaxxer</groupId>
+			<artifactId>HikariCP-java6</artifactId>
+			<version>${hikari-cp.version}</version>
+			<scope>compile</scope>
 		</dependency>
 
 		<dependency>
