Update Mule - TruckCenterRestService

--- a/truck-center-webapp/src/main/resources/application-heroku.properties
+++ b/truck-center-webapp/src/main/resources/application-heroku.properties
@@ -7,17 +7,17 @@ logging.level.org.hibernate=INFO
 logging.level.com.ingesup=DEBUG
 
 
-qcm.datasource.dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
-qcm.datasource.url=jdbc:mysql://eu-cdbr-west-01.cleardb.com/heroku_a576c312d5ed9d7?reconnect=true
-qcm.datasource.username=ba0afe6a0044df
-qcm.datasource.password=e0ac914f
+truck-center.datasource.dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
+truck-center.datasource.url=jdbc:mysql://eu-cdbr-west-01.cleardb.com/heroku_a576c312d5ed9d7?reconnect=true
+truck-center.datasource.username=ba0afe6a0044df
+truck-center.datasource.password=e0ac914f
 
 
-qcm.datasource.cachePrepStmts=true
-qcm.datasource.prepStmtCacheSize=250
-qcm.datasource.prepStmtCacheSqlLimit=2048
-qcm.datasource.useServerPrepStmts=true
-qcm.datasource.maximumPoolSize=9
+truck-center.datasource.cachePrepStmts=true
+truck-center.datasource.prepStmtCacheSize=250
+truck-center.datasource.prepStmtCacheSqlLimit=2048
+truck-center.datasource.useServerPrepStmts=true
+truck-center.datasource.maximumPoolSize=9
 
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
