--- a/truck-center-webapp/src/main/resources/application-heroku.properties
+++ b/truck-center-webapp/src/main/resources/application-heroku.properties
@@ -2,9 +2,9 @@
 server.port=8080
 
 ### LOGGING
-logging.level.org.springframework=INFO
-logging.level.org.hibernate=INFO
-logging.level.com.ingesup=DEBUG
+logging.level.org.springframework=ERROR
+logging.level.org.hibernate=ERROR
+logging.level.com.ingesup=INFO
 
 
 truck-center.datasource.dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
