Add ConfigurationProperties for API Security

--- a/truck-center-webapp/src/main/resources/application-test.properties
+++ b/truck-center-webapp/src/main/resources/application-test.properties
@@ -23,6 +23,9 @@ security.user.name=admin
 security.user.password=admin
 security.user.role=ADMIN
 
+truck-center.security.basic.username=admin
+truck-center.security.basic.password=admin
+
 ### TRUCK-CENTER DATABASE ###
 truck-center.initialize=true
 truck-center.roles=ROLE_ADMIN,ROLE_DRIVER
