--- a/truck-center-webapp/src/main/resources/application-heroku.properties
+++ b/truck-center-webapp/src/main/resources/application-heroku.properties
@@ -30,6 +30,9 @@ security.user.name=admin
 security.user.password=admin
 security.user.role=ADMIN
 
+truck-center.security.basic.username=admin
+truck-center.security.basic.password=admin
+
 ### TRUCK-CENTER DATABASE ###
 truck-center.initialize=false
 truck-center.roles=ROLE_ADMIN,ROLE_DRIVER
