--- a/truck-center-webapp/src/main/resources/application.properties
+++ b/truck-center-webapp/src/main/resources/application.properties
@@ -7,16 +7,6 @@ logging.level.org.activiti=INFO
 logging.level.org.hibernate=INFO
 logging.level.com.ingesup=DEBUG
 
-#
-#spring.view.prefix=classpath:/templates/
-#spring.view.suffix=.jsp
-
-##### DataSource properties ###
-#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.datasource.url=jdbc:sqlserver://xmc90ssinh.database.windows.net:1433;databaseName=bdsoap
-#spring.datasource.username=justyna
-#spring.datasource.password=Ingesup69
-
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/truck_center
 spring.datasource.username=truck-center
@@ -31,6 +21,9 @@ spring.jpa.hibernate.ddl-auto=update
 security.user.name=admin
 security.user.password=admin
 security.user.role=ADMIN
+
+truck-center.security.basic.username=admin
+truck-center.security.basic.password=admin
 
 ### TRUCK-CENTER DATABASE ###
 truck-center.initialize=false
